fix tech line wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4851,7 +4851,7 @@ sup, sub {
   margin: 0 auto;
   max-width: 960px;
 }
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 550px) {
   #about {
     width: 80%;
   }
