--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -2,7 +2,7 @@
   width: 90%;
   margin: 0 auto;
   max-width: 960px;
-  @media only screen and (min-width: 375px) {
+  @media only screen and (min-width: $cut) {
     width: 80%;
   }
 }
